--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,18 +1,18 @@
-$innactiveBorderColour: #D0D0D8;
+$innactiveBorderColor: #D0D0D8;
 
 
-$correctBackgroundColour: #E6FAEA;
-$correctBordersColour: #47D867;
+$correctBackgroundColor: #E6FAEA;
+$correctBordersColor: #47D867;
 
-$selectedBackgroundColour: #FFF3EB;
-$selectedBordersColour: #FF8B37; 
+$selectedBackgroundColor: #FFF3EB;
+$selectedBordersColor: #FF8B37; 
 
-$wrongBackgroundColour: #FDEEED;
-$wrongBordersColour: #EC6259;
+$wrongBackgroundColor: #FDEEED;
+$wrongBordersColor: #EC6259;
 
-$mainOrangeColour: #FF8B37;
+$mainOrangeColor: #FF8B37;
 
-$hoverButtonColour: #FFAC70;
-$pressedButtonColour: #E87928;
+$hoverButtonColor: #FFAC70;
+$pressedButtonColor: #E87928;
 
-$titleColour: #1C1C21;
+$titleColor: #1C1C21;
