--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,8 @@
 .container {
     margin-left: auto;
     margin-right: auto;
-    padding: 80px 16px 48px 16px;
+    padding-left: 16px;
+    padding-right: 16px;
     width: 320px;
 
     @media screen and (min-width: 768px) {
@@ -10,7 +11,9 @@
         padding-right: 32px;
     }
 
-    @media screen and (min-width: 1024px) {
-        width: 1024px;
+    @media screen and (min-width: 1440px) {
+        width: 1440px;
+        padding-left: 80px;
+        padding-right: 80px;
     }
 }
