--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -16,3 +16,8 @@ $hoverButtonColor: #FFAC70;
 $pressedButtonColor: #E87928;
 
 $titleColor: #1C1C21;
+$answerColor: #1C1C21;
+
+$gameBackgroundColor: #F5F5F7;
+
+$menuBackgroundColor: #E5E5E5;
