--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,6 @@
 @import './vars';
 @import './components/container';
 
-@import './gameStart';
+@import './game-start';
+@import './game';
+@import './menu';
