--- a/css/main.css
+++ b/css/main.css
@@ -64,13 +64,18 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
 }
 
-@media screen and (min-width: 768px) {
-  .game-start {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
+.game-start.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
 }
 
 @media screen and (min-width: 1440px) {
@@ -135,6 +140,10 @@ h6 {
   display: block;
 }
 
+.start-button:active {
+  background-color: #E87928;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1439px) {
   .start-button {
     width: 390px;
@@ -149,6 +158,12 @@ h6 {
     padding: 21px 24px 20px 24px;
     font-size: 20px;
   }
+  .start-button:hover {
+    background-color: #FFAC70;
+  }
+  .start-button:active {
+    background-color: #E87928;
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -159,5 +174,173 @@ h6 {
     align-items: flex-start;
     margin-left: 32px;
   }
+}
+
+.game-section {
+  background-color: #F5F5F7;
+  height: 100vh;
+  display: flex;
+  padding-bottom: 24px;
+}
+
+.game-section.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.container--game-flex {
+  align-self: flex-end;
+}
+
+.menu-open-btn {
+  width: 24px;
+  height: 24px;
+  background-color: transparent;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.question {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 116%;
+  text-align: center;
+  color: #1C1C21;
+  margin-bottom: 97px;
+}
+
+.answers {
+  display: flex;
+  flex-direction: column;
+}
+
+.answer-button {
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+  background-color: transparent;
+  text-align: start;
+  padding: 0 24px;
+}
+
+.answer__leter {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 116%;
+  color: #FF8B37;
+  margin-right: 8px;
+}
+
+.answer__item {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 116%;
+  color: #1C1C21;
+  position: relative;
+  width: 100%;
+  height: 56px;
+  border: 1px solid #D0D0D8;
+  border-radius: 5px;
+}
+
+.answer__item + .answer__item {
+  margin-top: 8px;
+}
+
+.answer__item::before {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 1px;
+  left: -17px;
+  top: calc(50% - 0px/2);
+  background-color: #D0D0D8;
+}
+
+.answer__item::after {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 1px;
+  right: -px;
+  top: calc(50% - 0px/2);
+  background-color: #D0D0D8;
+}
+
+.menu-section {
+  transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
+}
+
+.menu-section.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.container--menu-flex {
+  display: flex;
+  align-self: flex-end;
+  justify-content: center;
+}
+
+.prizes {
+  align-self: flex-end;
+}
+
+.prize__item {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 116%;
+  color: #1C1C21;
+  width: 240px;
+  padding: 8px 24px;
+  border-radius: 5px;
+  background-image: url(../images/Rectangle2.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.prize__item::before {
+  content: "";
+  position: absolute;
+  width: 41px;
+  height: 1px;
+  left: -41px;
+  top: calc(50% - 0px/2);
+  background-color: #D0D0D8;
+}
+
+.prize__item::after {
+  content: "";
+  position: absolute;
+  width: 41px;
+  height: 1px;
+  right: -41px;
+  top: calc(50% - 0px/2);
+  background-color: #D0D0D8;
 }
 /*# sourceMappingURL=main.css.map */
