--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,5 +1,8 @@
 .menu-section{
     transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;    
+    height: 100vh;
+    padding: 32px 0;
+    background-color: $gameBackgroundColor;
     &.is-hidden{
         position: absolute;
         width: 1px;
@@ -20,6 +23,19 @@
 
 .prizes{
     align-self: flex-end;
+    margin-top: 32px;
+}
+
+.menu-close-btn{
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .prize__item{
@@ -31,11 +47,13 @@
     color: $answerColor;
     width: 240px;
     padding: 8px 24px;
-    border-radius: 5px;
     background-image: url(../images/Rectangle2.png);
     background-size: contain;
     background-repeat: no-repeat;
     position: relative;
+    display: flex;
+    align-self: flex-end;
+    justify-content: center;
     &::before{
         content: "";
         position: absolute;
@@ -53,5 +71,8 @@
         right: -41px;
         top: calc(50% - 0px/2);
         background-color: $innactiveBorderColor;
+    }
+    & + &{
+        margin-top: 8px;
     }
 }
